--- a/doc/CBLS.tex
+++ b/doc/CBLS.tex
@@ -3,8 +3,9 @@ search. Constraint programming gives a natural way of describing a problem and c
 propagators, and search strategies. Local search has concepts such as moves, neighborhood, and metaheuristics that have 
 specific implementations for each problem type. Local search offers high quality solution within a relatively short time 
 limit. \\ 
-The idea of CBLS framework is to offer global constraint to formulate the problem while local search algorithms are 
-used to solve the model. This gives the reusability and formulation power of constraint programming while having the 
-efficiency of local search. \\ 
+The idea of a CBLS framework is to offer global constraint to formulate the problem while local search algorithms are 
+used to solve the model. The user can focus on modeling their problem instead of creating and optimizing 
+algorithms to solve it. This gives the reusability and formulation power of constraint programming while having the 
+performance of local search.   \\ 
 To make local search efficiently on the constraints formulated new data structures are introduced such as Invariants 
 and oneway constraints. 
