--- a/doc/construcHeur.tex
+++ b/doc/construcHeur.tex
@@ -10,5 +10,5 @@ between its lower and upper bound is chosen uniformly at random. This is a fast 
 cannot give any guarantee of the quality. Examples of other construction heuristics can be greedy heuristics like first 
 fit or best fit. \\ 
 Construction heuristics can be tailor made to a specific problem type to find a good initial solution depending on the 
-problem. It might be beneficial to introduce randomness in the algorithm and rerun it a couple of times and to get a 
-better initial solution at the cost of time. 
+problem. It can be beneficial to introduce randomness in the algorithm and rerun it a couple of times and to get a 
+better initial solution.
