--- a/doc/invariant.tex
+++ b/doc/invariant.tex
@@ -1,11 +1,12 @@
 \emph{Invariants} are dependent variables, whose value are functionally defined by other independent variables and/or 
 invariants. Invariants can represent variables or auxiliary variables whose value are of interest. \\
-\emph{One-way constraints} are constraints that functionally defines the value of an invariant.
+\emph{One-way constraints} are constraints that functionally defines the value of an invariant. 
 \begin{equation}
- z = f(\mathbf{X}) 
+ V(y) = f(X'), \; X'  \subseteq X 
 \end{equation}
-Where $f(\mathbf{X})$ is a oneway constraint with a set of input variables $X$ that functionally defines the invariant 
-$z$. \\
+Where $f(X')$ is a oneway constraint with the scope $X'$ that functionally defines the invariant 
+$y$. The operators for an invariant $y$ are the same as those for a variable $x$ such as $V(y)$ is the value of the 
+invariant. \\
 \medskip
 
 
