--- a/doc/main.bib
+++ b/doc/main.bib
@@ -54,6 +54,19 @@ http://www.amazon.com/Feasibility-Infeasibility-Optimization-Computational-Inter
 3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0387749314
 }
 }
+@article{feedback,
+author = {Karp, R. M.},
+   title = {Reducibility among combinatorial problems},
+   journal = {he Journal of Symbolic Logic J},
+   year = {1972}
+}
+@article{oscar,
+arthor= {Gustav Bj̈ordal, Jean-No ̈el Monette, Pierre Flener,Justin Pearson},
+ title = {A constraint-based local search backend for MiniZinc},
+ year= {2015},
+ Publisher = {Springer, Business Media New York}
+ 
+}
 @incollection{CPbog,
   author={},
   title={Handbook of Constraint Programming},
@@ -66,8 +79,15 @@ http://www.amazon.com/Feasibility-Infeasibility-Optimization-Computational-Inter
   pages= {266-290},
   chapter= {10}
 }
-@online{url_globalCons,
+@misc{url_globalCons,
+  author = {Nicolas Beldiceanu, Sophie Demassey},
+  title = {Global Constraint Catalog},
+  howpublished = "\url{http://sofdem.github.io/gccat/}",  
+  note = "[Online; accessed 17-12-2015]"
+}
+#@online{url_globalCons,
   author={ Nicolas Beldiceanu, Sophie Demassey },
-  url={http://sofdem.github.io/gccat/},
+  url="\url{http://sofdem.github.io/gccat/}",
+  
   urldate={17-12-15}
   }
