--- a/doc/variables.tex
+++ b/doc/variables.tex
@@ -1,1 +1,5 @@
-\subsection{Variables}
+The  \class{Variable} only consist of short setters and getters methods. Each variable has a unique 
+integer id in the order they are created. Their current value must be within their domain, that is given by a lower and 
+upper bound. Each variable has a boolean that tell if the domain size of the variable is one and a boolean that tell 
+if it is defined by a oneway constraint. They have a value for the number of constraints and oneway constraints they 
+participate in. \\ 
