--- a/doc/CP.tex
+++ b/doc/CP.tex
@@ -7,14 +7,14 @@ of a global constraint is the {\sffamily{alldifferent(\textbf{x})}} constraint t
 must have pairwise distinct values.  \\ 
 Two important aspects of solving a CSP are inference and search. \emph{Inference} is adding constraints to the CSP that 
 does not eliminate any feasible solution but might make it easier to solve the CSP \cite[p.301]{CPbog}. 
-Interference when dealing with variables with finite domain can local constraint propagation that is often used to 
-eliminate large subspaces of the search space \boste{Search space not defined yet}. Propagation can be restricting 
-domains of variables, called filtering, or combinations of values to variabels, based on the constraint doing 
-propagation \cite[p. 169]{CPbog}. Propagation can be done when a constraint is created by eliminating possible 
-assignments of the variables. I.e. by doing propagation on the constraint $x_1 + x_2 \leq 2$ where $x_1,x_2 \in 
-\mathbf{Z}^+$ we can reduce the domain of the variables to $\{0,1,2\}$. If we set $x_1 =1$ we can again do propagation 
-and reduce the domain of $x_2$ to $\{0,1\}$. \\ \boste{Tror jeg vil forklare om search space tidligere og introducere 
-hvordan det bliver søgt her} \\ 
+Local constraint propagation is an example of inference when dealing with variables with finite domain and can be used 
+to eliminate large subspaces of the search space $S$. Propagation can be restricting domains of variables, called 
+filtering, or combinations of values to variables, based on the constraint doing propagation \cite[p. 169]{CPbog}. 
+Propagation can be done when a constraint is created by eliminating values from the domain of variables. I.e. by 
+doing propagation on the constraint $x_1 + x_2 \leq 2$ where $x_1,x_2 \in \mathbf{Z}^+$ we can reduce the domain of the 
+variables to $\{0,1,2\}$. If we set $x_1 =1$ we can again do propagation and reduce the domain of $x_2$ to $\{0,1\}$. 
+\\ 
 Search strategies explores possible assignments of variables and an exhaustive search would be a combination of all 
 possible assignments of values to the variables. When combining propagation and search strategies the search space can 
 be examined exhaustively and large subspaces can be pruned by propagation. \\ 
+COP
