--- a/doc/bpip.tex
+++ b/doc/bpip.tex
@@ -1,5 +1,5 @@
 Binary- and integer linear programming can be used to model a wide range of problems by posting linear constraints and 
-using and a linear objective function. A linear integer program (ILP) can be writing on the form: 
+using and a linear objective function. A integer linear program (ILP) can be writing on the form: 
 \begin{align}
  \text{Minimize }\; &z =  \mathbf{c}^T\mathbf{x} \\ 
  \text{subject to } \; & A\mathbf{x} \leq \mathbf{b} \\ 
@@ -8,10 +8,10 @@ using and a linear objective function. A linear integer program (ILP) can be wri
 Here $A$ is a $n \times m$ matrix of coefficients, $\mathbf{b} \in \mathbb{R}^m$, $z$ is the value of the objective 
 function and $\mathbf{c} \in \mathbb{R}^n$. The first line is the objective function and can easily be transformed to a 
 maximization problem by multiplying by $-1$. The relation in line 2 can be a mix of $\{\leq,=,\geq\}$ but greater 
-than or equal can be transformed to less than or equal by multiplying both side of the constraint by minus one.  \\ 
+than or equal can be transformed to less than or equal by multiplying both side of the constraint by $-1$.  \\ 
 A candidate solution is an assignment of values to all variables $\mathbf{x}$ and a solution is said to be feasible if 
 all constraints are satisfied. The set of feasible solutions consist of integer point in a $n$ dimensional space and 
-the point that minimize the objective function is said to be the optimal solution. There can be several optimal 
+the point that minimize the objective function is said to be the optimal solution. There can be multiple optimal 
 solutions for a given model. \\
 Solving a general integer program or binary program is a NP-hard problem \cite[p.30]{ilpbog} and several techniques are 
 developed for solving them. The techniques can be i.e. branch and bound, cutting plane and branch and cut 
