--- a/doc/discOpt.tex
+++ b/doc/discOpt.tex
@@ -4,7 +4,7 @@ A \emph{Constraint Satisfaction Problem} (CSP) is defined as a triple $\mathbb{P
 $\tau = (V(x_1), V(x_2), \dots , V(x_n))$ from the set of all candidate solutions $S$ called the \emph{search space}.  
 % D_1 \times D_2 \times %\dots , D_n) $ where $\tau_i \in D_i$. 
 Given a sequence $X' \subseteq X$ of variables $\tau[X']$ is called a restriction on $\tau$, ordered according to 
-$X$. If the restriction $\tau[X(c_j)]$ matches a tuble of the constraint $c_j$ in extensional form the solution $\tau$ 
-satisfies constriant $c_j$. If each constraint $c_j \in C$ is satisfied then the solution $\tau$ is a \emph{feasible 
+$X$. The constraint $c_j$ is satisfied by $\tau$ if the restriction $\tau[X(c_j)]$ matches a tuple of the constraint 
+$c_j$ in extensional form. If each constraint $c_j \in C$ is satisfied then the solution $\tau$ is a \emph{feasible 
 solution} to the CSP $\mathbb{P}$. \\
 
