--- a/doc/gecode.tex
+++ b/doc/gecode.tex
@@ -1,27 +1,33 @@
-Gecode (generic constraint development environment) is a constraint programming solver implemented in C++ and 
+Gecode (GEneric COnstraint Development Environment) is a constraint programming solver implemented in C++ and 
 offer a wide range of modeling features. Gecode offers more than 70 constraints from the ``Global Constraint Catalog'' 
 \cite{url_globalCons} that can be applied to boolean, integer, set and float variables. \boste{Muligvis Gecode 
 architecture billede} \\ 
-A model created for Gecode is created by inheriting the space class. Space is is a basic layer in Gecode that a user 
-can build the model on. To Create variables or post constraints the user need to specify the space they should be 
-created in. When variables are created in a space, views are created and associated with the variables. 
-Views are not used in modeling but are used to know when propagation should be made on a constraint.  When posting 
-constraints in a space, Gecode creates propagators and these propagators can subscribe to the views of the variables 
-in the constraint. When variables changes domain the corresponding view tell its subscribes that the variables domain 
-has changed. For some constraint the user has the option to choose the propagator based on a consistency level. 
-The cost of different consistency level varies from linear in the number of variables to exponential \cite[p.57]{MPG:M}. 
-\\
-To solve a problem Gecode needs guidance when searching and that is done by a branch function. Once a problem has been 
-formulated, the user must define on which variables and how branching is done. Just like variables and constraints are 
-posted in a space the branch order is also posted on the space. The choices in branching for a set of variables are 
+A model created for Gecode is created by inheriting the \class{Space} class. \class{Space} is a class in Gecode that 
+a user can create the model in. To create variables or post constraints the user need to specify the \class{Space} they 
+should be created in. When variables are created in a \class{Space}, views are created and associated with the 
+variables. Views are not used in modeling but are used to know when propagation should be made on a constraint. \\ 
+When posting constraints in a \class{Space}, Gecode creates propagators and these propagators can subscribe to the views 
+of the variables in the constraint. When variables changes domain the corresponding view tell its subscribes that the 
+variables domain has changed. For some constraint the user has the option to choose the propagator based on a 
+consistency level. The cost of different consistency level varies from linear $O(n)$ in the number of variables $n$ to 
+exponential $O(D(x)^n$. \cite[p.57]{MPG:M}. \\
+To solve a problem Gecode needs guidance when searching and that is done by a \method{branch} method. Once a problem 
+has been formulated, the user must define on which variables and how branching is done. Just like variables and 
+constraints are 
+posted in a \class{Space} the branch order is also posted on the \class{Space}. The choices in branching for a set of 
+variables are 
 which of those variables to branch on first and what values to branch on. One can post several branch methods and they 
-are treated in the order they are posted. Once all variables have been branched in one branch function it continues 
-with the  If no branch strategy is chosen for a variable then branching is not done on that variable. \\ 
-To start the search a search engine must be chosen and Gecode offers two, a depth first search engine and a branch and 
-bound engine. Search engines have an option class in which several options can be set \cite[p.157]{MPG:M}. \\ 
-When searching for a solution in a space, the search can be illustrated as a binary tree where the edges are 
-branch choices for a variable and the vertices are the space created because of those choices. If it reaches a point 
-where no solution is possible it stop branches from that vertex and the space is said to be failed. While searching for 
-solution sometimes, based on a search parameter from the option given, Gecode clones the spaces. When Gecode 
-reaches a failed space, instead of starting from scratch and recompute all way to down to the previous vertex, it 
-uses the closest clone to backtrack to that space. \\
+are treated in the order they are posted. Once all variables have been branched in one \method{branch} method it 
+continues with the next \method{branch} or restarts.  If no branch strategy is chosen for a variable then branching is 
+not done on that variable. \\ 
+To start the search a Gecode search engine must be chosen and Gecode offers two, a depth first search engine and a 
+branch and bound engine. Search engines have an option class in which several options can be set \cite[p.157]{MPG:M}. 
+\\ 
+When searching for a solution in a \class{Space}, the search can be illustrated as a binary tree where the edges are 
+branch choices for a variable and the vertices are the \class{Space} created because of those choices. If it reaches a 
+point 
+where no feasible solution is possible it stops branching from that vertex and the \class{Space} is said to be failed. 
+Gecode creates clones of \class{Space}s while searching for a solution that are used for backtracking. When Gecode 
+reaches a failed \class{Space}, instead of starting from scratch and recompute all way to down to the previous vertex, 
+it 
+uses the closest clone to backtrack to that \class{Space}. \\
