--- a/doc/heurLS.tex
+++ b/doc/heurLS.tex
@@ -2,5 +2,5 @@ In contrast to integer programming and constraint programming, local search does
 search for a solution. Local search is based on making small changes to the current solution and 
 see if it can improve and sacrifices the optimality guaranty for performance. \\ 
 To create a model for local search a set of variables and a set constraints for the variables needs to be defined. The 
-constraints are implicit constraints and some might need to be relaxed to soft constraints. The variables and implicit 
-constraints define the candidate solution and hence the search space $S$.
+constraints are either implicit constraints or soft constraints. The variables and implicit constraints define the 
+candidate solution and hence the search space $S$.
