--- a/doc/inisol.tex
+++ b/doc/inisol.tex
@@ -2,30 +2,29 @@ Once domain reduction preprocessing has been done a Gecode DFS search engine is 
 search can be specified by an option class. A Gecode search engine takes a space and search option 
 as arguments and the search option contains a stop object. The stop object can either be timestop, nodestop or 
 failstop. Each time Gecode branches on a variable two new nodes are created and nodestop set a upper bound on the 
-number of nodes to explorer. If Gecode reaches a node that gives an infeasible assignment to a variable then that space 
-is failed and failstop sets an upper bound on the number of failed spaces that can occur before stopping. Timestop 
-stops the search if the time limit is reach. \\ 
-Instead of having only one of these stop object a multistop object has been created that combines all three stop 
-objects if the user wants to having multiple stop criteria. \\ 
+number of nodes to explorer. If Gecode reaches a node that has no feasible assignment of one or more variables then 
+that space is failed and failstop sets an upper bound on the number of failed spaces that can occur before stopping. 
+Timestop stops the search if the time limit is reach. \\ 
+Instead of using only one of these stop object a \class{Multistop} object is created that combines all three 
+stop objects such that it can have multiple stopping criteria. \\ 
 Combinatorial problems can be formulated with Gecode and these problems can be very difficult to solve. In these cases 
 Gecode keeps searching for a solution until it finds one (or runs out of available memory). Instead, the search can be 
 stopped using stop object and the constraints can be relaxed such that Gecode can find a initial solution to the 
 instance. If one of the stop criteria is reached the \method{relax} is called and some of the constraint are relaxed. To 
 relax some constraints a new Gecode Engine is created and all variables and constraints, except those relaxed, 
 are created and added to the new space. In order to choose which constraint that should be removed the priority of the 
-constraints, given by the user, is used. Different techniques can be applied for choosing which constraints with the 
-same priority to remove. The one chosen here is a stepwise backward algorithm, that is a greedy approach. \boste{Article 
-Marco talked about propose some method, but says a greedy approach is good as well? }. The number of constraints that 
-are relaxed/removed is based on the number of constraints $|C|$ and the number of restarts made $r$. The number of 
-relaxed constraints is given by equation (\ref{eq_relaxed}). 
-\begin{equation}
- Relaxed = \ceil[\bigg]{\frac{2^{r}}{100}\cdot |C|}
- \label{eq_relaxed}
-\end{equation} 
-After six relaxations 64 \% of the constraints have been relaxed and if no solution can be found within the search 
-limits, the search is stopped and finding a solution to the instance has failed.  \\ 
+constraints, given by the user, is used. The constraint is only relaxed if all non functional constraints with lower 
+priority has been relaxed. The functional constraints are the last to be relaxed no matter what their priority is. The 
+reason for this choice is these constraints are used to create oneway constraints and are only created if the 
+functional constraints is feasible. This will be discussed further in the next section.  \\ 
+A greedy approach is chosen in order to keep the time usage low. Each time Gecode fails in finding a solution the number 
+of constraints added next time is halved. This is repeated at most 2 times, down to posting 25 \% of the constraints. If 
+no solution can be found within the search 
+limits, the search is stopped and finding an initial solution to the instance has failed.  \\ 
 The constraints are chosen by their priority and ties are broken at random. I.e. a model with 100 constraint of 
 priority 1, 40 of priority 2, and 15 of priority 3 and there are 20 constraints that should be relaxed. The 15 
 constraints with priority 3 and 5 of the 40 constraints with priority 2 are chosen at random would not be posted. The 
 constraints that are not posted in the Gecode space are still applied when doing local search, hence the initial 
-solution might start with some violations.  
+solution might start with some violations.  \\
+If Gecode fails to find an initial solution, the independent variables are assigned value within their domain chosen 
+uniformly at random. 
