--- a/doc/prepros.tex
+++ b/doc/prepros.tex
@@ -1,5 +1,4 @@
-Each time a constraint is posted by a user it is parsed from General Solver to the Gecode Solver. The Gecode solver is 
-derived from Gecode Space \boste{Define structure / Space before this} and the constraints parsed is posted in the 
-Gecode Solver. Gecode has a large selection of constraints that can be used \cite[p. 58-80]{MPG:M}. Most of the 
-constructors of these constraints are overloaded such that they can take different arguments and works with different 
-types of variables. 
+All constraints that are created are both saved in \class{Storage} and parsed to \class{GecodeSolver}, that is derived 
+from Gecode Space. In \class{GecodeSolver} they are posted such that Gecode can be used to find an initial solution. 
+Gecode has a large selection of constraints that can be used \cite[p. 58-80]{MPG:M}. Most of the constructors of these 
+constraints are overloaded such that they can take different arguments and works with different types of variables. 
