--- a/doc/softCons.tex
+++ b/doc/softCons.tex
@@ -1,7 +1,7 @@
-\emph{Soft constraints} are constraints that the CBLS should try to satisfy when making moves. If a 
-soft constraint is not satisfied we say it is violated and it contributes to the evaluation function. There are 
-different ways of measuring violation in a constraint. One way is a boolean value, zero for not violated and one for 
-violated. Another way is measure how much a constraint is violated, \emph{violation degree}, by a function depending on 
-the constraint. I.e. for the \textbf{alldifferent(X)} constraint, that is all variables \textbf{X} must have pairwise 
-distinct values, it can be the number of variables with the same value as another variable. \\ 
+\emph{Soft constraints} are constraints that the local search should try to satisfy when making neigborhood operations. 
+If a soft constraint is not satisfied we say it is violated and it contributes to the evaluation function. There are 
+different ways of measuring the violation in a constraint. One way is a binary value, zero for not violated and one 
+for violated. Another way is to use \emph{violation degree}, a measurement of how violated a constraint is, by a 
+function depending on the constraint. I.e. for the \textbf{alldifferent(X)} constraint, that is all variables \textbf{X} 
+must have pairwise distinct values, it can be the number of variables with the same value as another variable. \\ 
 
